sensord (0.6.26) unstable; urgency=low

  *

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 21 Sep 2010 09:15:08 +0300

sensord (0.6.25) unstable; urgency=low

  [Antti Virtanen]
  * Various cleanup and refactoring
    - Added some missing includes and removed unnecessary ones.
    - Changed destructors of classes used in inheritance to virtual.
    - Some optimizations.
    - Fixed const correctness of some functions.
    - Replaced direct usage of qDebug() with logging macros.
    - Improved error-handling in Loader.
    - SensordLogger now correctly prints QStrings.
    - Config/Logging singletons are now unloaded before exitting from main().

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 21 Sep 2010 10:32:41 +0300

sensord (0.6.24) unstable; urgency=low

  [Antti Virtanen]
  * SensordLogger rewritten: new implementation should be lot of faster and random core dumps should disapper. Logging macros work as before. Fixes: NB#191465.
  * Moved signal handler implementations to main.cpp and signal() is called only for main thread. Added new function SensorManager::printStatus() which implements debug printing for signal handler.

  [Timo Rongas]
  * Fixes: NB#192707 - Sensord polls constantly on otherwise idle device

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 20 Sep 2010 10:32:41 +0300

sensord (0.6.23) unstable; urgency=low

  [Lihan Guo]
  * Fixes: NB#186211 - During an ongoing alarm notification, when a device placed flat is lifted up rapidly it snoozes the alarm
  * Implements: SWP#MaSSW-2027

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Thu, 09 Sep 2010 14:51:13 +0300

sensord (0.6.22) unstable; urgency=low

  [Lihan Guo]
  * Edit  tests/testutils/sensordiverter.sh, change als to FIFO
  * Fixes: NB#186831 - sensord-contextfw-tests fail because sensor faking no longer works  

  [Timo Rongas]
  * Removed libfilters.so (context in datatypes/ now)
  * Fixed a bug with missing libcompasschain.so in RotationSensor