@@ -79,13 +79,10 @@ void signalFlush(int param)
 
 int main(int argc, char *argv[])
 {
-    SensordLogger::init();
-
-    {sensordLog() << "Starting sensord...";}
     QCoreApplication app(argc, argv);
     SensorManager& sm = SensorManager::instance();
     Parser parser(app.arguments());
-    SensordLogger::m_target = parser.logTarget();
+    SensordLogger::init(parser.logTarget(), parser.logFilePath());
 
     if (parser.printHelp())
     {
@@ -209,7 +206,8 @@ void printUsage()
     qDebug() << "                                  can also be notched up by sending SIGUSR1 to";
     qDebug() << "                                  the process. Valid values for N are: 'test',";
     qDebug() << "                                  'debug', 'warning', 'critical'.\n";
-    qDebug() << " --log-target=N                   logging target (1=stdout, 2=stderr, 4=file('/var/log/sensord.log'), and combos e.g. 3= stdout|stderr";
+    qDebug() << " --log-target=N                   logging target mask (1=stdout, 2=stderr, 4=file, 8=syslog and combos e.g. 3=stdout|stderr\n";
+    qDebug() << " --log-file=P                     Log file path\n";
     qDebug() << " -c=P, --config-file=P            Load configuration from P. By default";
     qDebug() << "                                  /etc/sensord.conf is used.\n";
     qDebug() << " --no-context-info                Do not provide context information for context";
